fix editor height on small screens

--- a/css/design-browser.css
+++ b/css/design-browser.css
@@ -134,7 +134,8 @@ body{
 #editor-container{
 	background:rgba(0,0,0,0.5);
 	position:fixed;
-	width:100%;
+    width:100%;
+    height:100%;
 	top:0;
 	left:0;
 	z-index:10;
